# pba2026-kelompoknyaKartini

./: Dockerfile  LLM_USAGE.txt  README.md  TASK.md  check_cells.py  check_cells.txt  main.py  pyproject.toml  requirements.txt  text_preprocess.py  try.py
DL/: train_lstm.py
LLM USAGE/: LLM_USAGE.md  cursor-chat-f2a106fd.md
deep_learning/: __init__.py  classification_report.txt  dataloader.py  main.py  model.py  train.py  train_lstm.py
deep_learning/model/: spam_model_lstm.keras  spam_model_lstm.pth
deeplearning/model/: spam_classifier_lstm.pth
machine_learning/: config.py  confusion.py  model.py  pipeline.py  train.py  trainers.py
machine_learning/model/: spam_model_lr.pkl  spam_model_nb.pkl  spam_model_svm.pkl
notebook/: LSTM_notebook.ipynb
program/: app.py  preprocessing_nlp.ipynb  spam_model_lr.pkl  spam_model_nb.pkl  spam_model_svm.pkl
src/: .gitignore
src/dataset/: README.md
src/program/: app.py  index.py  spam_model_nb.pkl  tool.py  w2v_kamus.model
