[project]
name = "spam-indonesia-email-detect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gensim>=4.3,<5",
    "joblib==1.3.2",
    "numpy>=1.24,<1.27",
    "pandas>=2.0,<2.2",
    "pycaret==3.3.2",
    "sastrawi==1.0.1",
    "scikit-learn>=1.4,<1.5",
    "scipy>=1.7,<=1.11.4",
    "streamlit>=1.38,<2",
    "tensorflow>=2.15,<2.21",
    "torch>=2.11.0",
    "wandb>=0.16,<1.0",
]
